--- a/src/components/pages/Shop.css
+++ b/src/components/pages/Shop.css
@@ -17,13 +17,80 @@
 
 .shop-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(345px, 345px));
+  grid-template-columns: repeat(auto-fit, minmax(340px, 340px));
   grid-gap: 3.5rem 4rem;
   justify-content: center;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 50px;
 }
 
 .shop-list-item {
-  background-color: red;
+  width: 100%;
+  height: 550px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1);
+  border: 2px solid transparent;
+  transition: 0.3s ease border;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.shop-list-item:hover {
+  border: 2px solid #00a800;
+}
+
+.shop-list-item-img {
+  width: 100%;
+  height: 60%;
+}
+
+.shop-list-item-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.shop-list-item-detail {
+  width: 100%;
+  max-width: 330px;
+  height: 40%;
+  padding: 20px;
+  text-align: center;
+}
+
+.shop-list-item-detail p {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+@media screen and (max-width: 767px) {
+  .shop-header {
+    text-align: center;
+    font-size: 20px;
+  }
+
+  .shop-list-item {
+    height: 540px;
+  }
+
+  .shop-list-item-detail h3 {
+    font-size: 18px;
+  }
+
+  .shop-list-item-deatil-title {
+    font-size: 15px;
+  }
+
+  .shop-list-item-detail-review {
+    font-size: 15px;
+  }
+
+  .shop-list-item-detail-price {
+    font-size: 15px;
+  }
 }
