--- a/src/components/pages/Shop.css
+++ b/src/components/pages/Shop.css
@@ -15,6 +15,59 @@
   height: 22px;
 }
 
+.shop-sort-find-container {
+  width: 100%;
+  display: flex;
+}
+
+.shop-sort {
+  width: 50%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 25px;
+}
+
+.shop-sort-icon {
+  width: 18px;
+  height: 18px;
+}
+
+.shop-sort button {
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 10px;
+  cursor: pointer;
+  border: 2px solid transparent;
+  border-radius: 5px;
+  transition: 0.3s ease border;
+  /* background-color: #e1e0e4; */
+  background-color: transparent;
+}
+
+.shop-sort button:hover {
+  border: 2px solid #00a800 !important;
+}
+
+.shop-find {
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 25px;
+}
+
+.shop-find input {
+  width: 30%;
+  height: 60%;
+  padding: 15px;
+  transition: 0.3s ease all;
+}
+
+.shop-find input:focus {
+  width: 40%;
+}
+
 .shop-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(340px, 340px));
@@ -72,6 +125,47 @@
   .shop-header {
     text-align: center;
     font-size: 20px;
+  }
+
+  .shop-sort-find-container {
+    flex-wrap: wrap;
+  }
+
+  .shop-sort {
+    width: 100%;
+    padding: 10px;
+    justify-content: center;
+  }
+
+  .shop-sort-icon {
+    width: 13px;
+    height: 13px;
+  }
+
+  .shop-sort button {
+    font-size: 10px;
+    padding: 5px;
+  }
+
+  .shop-find {
+    width: 100%;
+    justify-content: center;
+    padding: 10px;
+    /* background-color: red; */
+  }
+
+  .shop-find input {
+    height: 85%;
+    padding: 10px;
+    width: 50%;
+  }
+
+  .shop-find input:focus {
+    width: 60%;
+  }
+
+  .shop-list {
+    margin-top: 20px;
   }
 
   .shop-list-item {
