--- a/src/components/utils/Profile/ProfileEdit.css
+++ b/src/components/utils/Profile/ProfileEdit.css
@@ -1,4 +1,121 @@
 .profile-edit-container {
   max-width: 800px;
   min-height: calc(100vh - 10rem);
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+
+.profile-edit-introduction {
+  padding: 15px;
+  margin-bottom: 30px;
+  color: #565360;
+}
+
+.profile-edit-form {
+  width: 85%;
+  max-width: 450px;
+  box-shadow: 10px 10px 20px rgba(19, 60, 202, 0.2);
+  margin-bottom: 40px;
+}
+
+.profile-edit-form-title {
+  text-align: center;
+  padding: 20px;
+}
+
+.profile-edit-form-title h4 {
+  letter-spacing: 2px;
+  color: grey;
+  margin-bottom: 10px;
+}
+
+.profile-edit-form-title h2 {
+  font-weight: 400;
+  letter-spacing: 3px;
+}
+
+.profile-edit-form form {
+  width: 50%;
+  padding-left: 23px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.profile-edit-input-container {
+  position: relative;
+}
+
+.profile-edit-input-container label {
+  position: absolute;
+  font-size: 10px;
+  color: orange;
+  left: 0;
+  bottom: 85px;
+  opacity: 0;
+  font-weight: 500;
+}
+
+.profile-edit-input-container input:focus + label {
+  opacity: 1;
+  transition: 0.5s all;
+}
+
+.profile-edit-form form input {
+  width: 85%;
+  height: 40px;
+  color: #908e9b;
+  border: transparent 2px solid;
+  border-bottom: grey 2px solid;
+  margin-bottom: 40px;
+  font-size: 14px;
+  transition: 0.2s border linear, 0.2s border-bottom linear, 0.2s outline linear,
+    0.2s border-radius linear;
+}
+
+.profile-edit-form form input:focus {
+  border: orange 2px solid;
+  border-bottom: orange 2px solid;
+  border-radius: 5px;
+  outline: none;
+}
+
+.profile-edit-button-container {
+  width: 88%;
+  margin-bottom: 50px;
+}
+
+.profile-edit-button-container .profile-edit-button-flexbox:nth-child(1) {
+  width: 100%;
+  justify-content: center;
+}
+
+.profile-edit-button-container button {
+  width: 100%;
+  height: 45px;
+  border: none;
+  font-size: 11px;
+  letter-spacing: 2px;
+  background-color: #212121;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: 0.2s opacity;
+}
+
+.profile-edit-button-flexbox button:hover {
+  opacity: 0.4;
+}
+
+@media screen and (max-width: 767px) {
+  .profile-edit-introduction {
+    width: 90%;
+    font-size: 14px;
+    line-height: 25px;
+    margin-bottom: 15px;
+  }
 }
