--- a/src/components/utils/Account/ForgotPassword.css
+++ b/src/components/utils/Account/ForgotPassword.css
@@ -3,6 +3,8 @@
   align-items: center;
   flex-direction: column;
   min-height: calc(100vh - 10rem);
+  opacity: 0;
+  animation: flash 0.7s 0.2s forwards;
 }
 
 .forgot-password-introduction {
