--- a/src/components/utils/Profile/ProfileHistory.css
+++ b/src/components/utils/Profile/ProfileHistory.css
@@ -1,4 +1,6 @@
 .profile-history-container {
   max-width: 800px;
   min-height: calc(100vh - 10rem);
+  opacity: 0;
+  animation: flash 0.7s 0.2s forwards;
 }
