--- a/src/components/pages/Shop.css
+++ b/src/components/pages/Shop.css
@@ -86,7 +86,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border: 2px solid transparent;
   transition: 0.3s ease border;
   border-radius: 5px;
